--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@ Bill Yuan Hong Sun</h1>
 <h5>
 Machine Learning and Software Engineer</h5>
 <p>
-Hi! I am a third-year <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Intelligence</a> student @ University of Toronto. I am currently on PEY co-op at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer, working on the <a href="https://www.deepaffex.ai/en/">DeepAffex</a> API. This is a showcase of my skills, projects, and insights. Take a look!
+Hi! I am a third-year <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Intelligence</a> 
+student @ University of Toronto. I am currently on PEY co-op at <a href="https://www.nuralogix.ai/">Nuralogix</a> 
+as a Data Science Software Developer, working on the <a href="https://www.deepaffex.ai/en/">DeepAffex</a> API. 
+This is a showcase of my skills, projects, and insights. Enjoy!
 </p>
 <ul>
 <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
