Edit profile and resume

--- a/overview.html
+++ b/overview.html
@@ -57,7 +57,7 @@
   </div>
 </div>
 
-<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:450px;">
+<div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:500px;">
 <body style="background-color:#333333;">
 
 
@@ -66,17 +66,23 @@
 
 <h1>About Me</h1><br>
 
-  <p>Welcome! I’m Bill Sun, a third-year Engineering Science student at the University of Toronto, majoring in 
+  <p>Hello! I’m Bill, a third-year Engineering Science student at the University of Toronto, majoring in 
     <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
     Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data, machine learning, 
     and the engineering approach to solve challenging problems, and helping to improve people's lives through technology.</p>
 
-  <p>Beginning in May 2019, I have begun my <a href="https://engineeringcareers.utoronto.ca/work-experience-programs/professional-experience-year-co-op-program-pey-co-op/">professional experience year (PEY)</a> co-op
-    at <a href="https://www.nuralogix.ai/">NuraLogix</a> as a Data Science Software Developer, where my work is centered around developing a Python 
-    API client for simple access of the <a href="https://www.deepaffex.ai/en/">DeepAffex (DFX)</a> cloud service. I also worked on numerous smaller projects on-board.</p>
+  <p>From May 2019 to May 2020, I am on <a href="https://engineeringcareers.utoronto.ca/work-experience-programs/professional-experience-year-co-op-program-pey-co-op/">professional experience year (PEY)</a> co-op
+    at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer, where my work is centered around developing a Python 
+    API client for simple access of the <a href="https://www.deepaffex.ai/en/engine.html">DeepAffex (DFX)</a> cloud service. I also doing significant work in 
+    data science, such as building a Jenkins pipeline to standarize data pre-processing, and implementing machine learning and numerical models. 
+    In addition, I am working on numerous internal software and web tools.</p>
 
-  <p>In my spare time, I like to workout, play sports, travel, photograph weather and nature, mentor younger peers, and read the news and books.</p><br><br>
+  <p>In my spare time, I am involved in numerous <a href="clubs.html">extracurricular activities</a>. I actively attend technical meetups and
+    participate in hackathons. I also like to workout, play sports, travel, photograph weather and nature, and mentor younger peers.</p>
 
+  <p>I am currently open to <strong>summer 2020</strong> internship opportunities in software engineering and data science. You can reach me by 
+    <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a> or <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/">LinkedIn</a>.
+<br><br><br>
 
 <h2 id="skills" style="text-align:center;">Skills Summary</h2>
 
