--- a/toastmasters.html
+++ b/toastmasters.html
@@ -24,7 +24,6 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-	
 	<a href="solarcar.html">Solar Car Racing Team</a>
 	<a href="ewb.html">Engineers Without Borders</a>
 	<a href="ilead.html">iLead The Game, University of Toronto</a>
@@ -68,12 +67,15 @@
 <h1>Toastmasters</h1>
 <h3>North York Toastmasters Club</h3>
 
-<p><a href="toastmasters.org">Toastmasters Central</a></p>
-<p><a href="northyorktoastmasters.com">Club Website</a></p>
+<p><a href="https://www.toastmasters.org/">Toastmasters Central</a></p>
+<p><a href="https://www.northyorktoastmasters.com/meetourmembers.html">Club Website</a></p>
 
 <p>I am currently a member of North York Toastmasters Club, serving as the club secretary.</p>
 
-<p>Having been a Toastmasters club member since March 2019, I am presently working towards the Competant Communicator (CC) award, which requires the completion of 10 speeches (or one Toastmasters pathway).</p>
+<p>Having been a Toastmasters club member since March 2019, I am presently working towards the 
+  <a href="https://www.toastmasters.org/education/communication-track">Competant Communicator (CC) award</a>, 
+  which requires the completion of 10 speeches (or one Toastmasters pathway). I am also working to complete the 
+  <a href="https://www.toastmasters.org/pathways-overview/pathways-visionary-communication-path">Visionary Communication pathway</a>.</p>
 
 </div>
 <br><br><br>
