--- a/overview.html
+++ b/overview.html
@@ -33,7 +33,7 @@
     	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
     	<a href="swim.html">Swimming and Lifeguarding</a>
     </div>
-  </div> 
+  </div>
   <div class="dropdown">
     <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
       <i class="fa fa-caret-down"></i>
@@ -66,21 +66,21 @@
 
 <h1>About Me</h1><br>
 
-  <p>Hello! I’m Bill, a third-year Engineering Science student at the University of Toronto, majoring in 
+  <p>Hello! I’m Bill, a third-year Engineering Science student at the University of Toronto, majoring in
     <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
-    Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data, machine learning, 
+    Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data, machine learning,
     and the engineering approach to solve challenging problems, and helping to improve people's lives through technology.</p>
 
   <p>From May 2019 to May 2020, I am on <a href="https://engineeringcareers.utoronto.ca/work-experience-programs/professional-experience-year-co-op-program-pey-co-op/">professional experience year (PEY)</a> co-op
-    at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer, where my work is centered around developing a Python 
-    API client for simple access of the <a href="https://www.deepaffex.ai/en/engine.html">DeepAffex (DFX)</a> cloud service. I also doing significant work in 
-    data science, such as building a Jenkins pipeline to standarize data pre-processing, and implementing machine learning and numerical models. 
+    at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer, where my work is centered around developing a Python
+    API client for simple access of the <a href="https://www.deepaffex.ai/en/engine.html">DeepAffex (DFX)</a> cloud service. I am also doing significant work in 
+    data science, such as building a Jenkins pipeline to standarize data pre-processing, and implementing machine learning and numerical models.
     In addition, I am working on numerous internal software and web tools.</p>
 
   <p>In my spare time, I am involved in numerous <a href="clubs.html">extracurricular activities</a>. I actively attend technical meetups and
     participate in hackathons. I also like to workout, play sports, travel, photograph weather and nature, and mentor younger peers.</p>
 
-  <p>I am currently open to <strong>summer 2020</strong> internship opportunities in software engineering and data science. You can reach me by 
+  <p>I am currently open to <strong>summer 2020</strong> internship opportunities in software engineering and data science. You can reach me by
     <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a> or <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/">LinkedIn</a>.
 <br><br><br>
 
@@ -88,7 +88,7 @@
 
 <style>
 box{
-     font-size: 15px; 
+     font-size: 15px;
      padding: 7px 10px 7px 10px;
      margin: 0px 5px 0px 5px;
      height: 29px;
@@ -114,12 +114,12 @@ th, td{
 }
 p a{
   text-decoration: none;
-  color: #ffbfbf; 
+  color: #ffbfbf;
   padding: 0;
 }
 p a:hover{
   text-decoration: underline;
-  color: #ffbfbf; 
+  color: #ffbfbf;
   padding: 0;
 }
 .container {
@@ -181,7 +181,7 @@ p a:hover{
 <table style="width:100%">
   <tr>
       <th><h3>Programming</h3></th>
-      <th><h3>Other Technologies</h3></th> 
+      <th><h3>Other Technologies</h3></th>
       <th><h3>Engineering & Leadership</h3></th>
   </tr>
 
@@ -302,7 +302,7 @@ p a:hover{
       <div class="container"><div class="skills good"></div></div></td>
   </tr>
 </table>
-<br> 
+<br>
 </div>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:700px;">
@@ -358,7 +358,7 @@ p a:hover{
     </figure>
 
 <br>
-<p>Click the images to view the details for each project.</p> 
+<p>Click the images to view the details for each project.</p>
 <p>If you are interested, you can view my <b>résumé</b> <a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf" style="color: #ffbfbf; padding: 0; text-decoration: none;">here</a>.</p><br>
 
 </div>
@@ -385,7 +385,7 @@ p a:hover{
 
 <!--Footer-->
 <div class="footer">
-<br>                                   
+<br>
 
 <p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font></font>
 
