--- a/ewb.html
+++ b/ewb.html
@@ -1,126 +1,99 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<!--Website Information -->
+	<!--Website Information -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Bill Sun's Personal Portfolio">
 	<meta name="author" content="Bill (Yuan Hong) Sun">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
-  	<script src="styles.js"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+	<script src="styles.js"></script>
 
 </head>
 
 <!--Menu-->
-<div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
-  <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-	<a href="solarcar.html">Solar Car Racing Team</a>
-	<a href="ewb.html">Engineers Without Borders</a>
-	<a href="ilead.html">iLead The Game, University of Toronto</a>
-	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-	<a href="weather.html">Earth Sciences Hobby Research</a>
-	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-	<a href="swim.html">Swimming and Lifeguarding</a>
-    </div>
-  </div> 
-  <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-        <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
-		<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
-		<a href="research.html">Transportation Modelling Research</a>
-	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-	<a href="game.html">Boxhead Video Game</a>
-	<a href="parking.html">Parking Manager App Simulator</a>
-	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-	<a href="civ102.html">CIV102 - Structures and Materials</a>
-    </div>
-  </div>
-  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
-    <div class="logo"><h1 style="margin:1px;">
-  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
-  </div>
-</div>
+<main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
+	<body style="background-color:#ccccff;">
 
-<body style="background-color:#ccccff;">
+		<!--Main-->
+		<title>EWB - Bill Sun</title>
+		</head>
 
-<!--Main-->
-<title>EWB - Bill Sun</title>
-</head>
+		<img src="pics/ewb1.png" alt="logo" style="width:35%;border:0;float:right;margin:20px">
+		<h1>Engineers Without Borders</h1>
+		<h3>University of Toronto Chapter</h3><br>
 
-<img src="pics/ewb1.png" alt="logo" style="width:35%;border:0;float:right;margin:20px">
-<h1>Engineers Without Borders</h1>
-<h3>University of Toronto Chapter</h3><br>
+		<h2>Youth Engagement Portfolio</h2>
+		<p>During first year (2016-2017), I was a part of Engineers Without Borders, University of Toronto chapter, in
+			the Youth Engagement portfolio. </p>
 
-<h2>Youth Engagement Portfolio</h2>
-<p>During first year (2016-2017), I was a part of Engineers Without Borders, University of Toronto chapter, in the Youth Engagement portfolio. </p>
+		<p>I joined since it serves a mission of helping younger students develop engineering design skills to make
+			social change. Through this experience, I believe that I am also making social change. I strongly believe
+			that as a professional engineer, it is my mission to serve the community and help make a difference.</p>
 
-<p>I joined since it serves a mission of helping younger students develop engineering design skills to make social change. Through this experience, I believe that I am also making social change. I strongly believe that as a professional engineer, it is my mission to serve the community and help make a difference.</p>
+		<img src="pics/copy-of-logo-ye.png" alt="logo" style="width:20%;border:0;">
 
-<img src="pics/copy-of-logo-ye.png" alt="logo" style="width:20%;border:0;">
+		<br>
+		<h2>EWBoosters and YAIT</h2>
+		<p>EWBoosters is the outreach branch of Youth Engagement that provides high schools in the GTA with resources to
+			start their own EWB clubs. It is also responsible for hosting engineering and global development workshops,
+			as well as hosting the annual Youth Action Initiative Toronto (YAIT) conference and case competition to be
+			held in May.</p>
 
-<br>
-<h2>EWBoosters and YAIT</h2>
-<p>EWBoosters is the outreach branch of Youth Engagement that provides high schools in the GTA with resources to start their own EWB clubs. It is also responsible for hosting engineering and global development workshops, as well as hosting the annual Youth Action Initiative Toronto (YAIT) conference and case competition to be held in May.</p>
+		<p>As the contents director of EWBoosters this year, I was given the task of developing engineering and global
+			development workshops, as well as preparing the materials for Youth Action Initiative Toronto. Some of my
+			work included a founding package for students interested in starting new EWB clubs, an engineering design
+			process workshop, and a design brief for YAIT. (Selected content will be available in June)</p>
 
-<p>As the contents director of EWBoosters this year, I was given the task of developing engineering and global development workshops, as well as preparing the materials for Youth Action Initiative Toronto. Some of my work included a founding package for students interested in starting new EWB clubs, an engineering design process workshop, and a design brief for YAIT. (Selected content will be available in June)</p>
+		<p>This year’s Youth Action Initiative Toronto is centred upon the opportunity of developing solutions to the
+			housing crisis in the GTA. Student teams will be assigned DFXs and will compete for the best solution in
+			each DFX category, as well as the best overall design.</p>
 
-<p>This year’s Youth Action Initiative Toronto is centred upon the opportunity of developing solutions to the housing crisis in the GTA. Student teams will be assigned DFXs and will compete for the best solution in each DFX category, as well as the best overall design.</p>
- 
-<br>
-<h2>Innomasters</h2>
-<p>Innomasters is a mentorship program for which a team of high school students are paired up with mentors from EWB U of T, and work on a Praxis/ESP style design project in their local community through the term. It is split into stages (including a design brief, and a recommendation report). The project concludes in a final showcase that takes place in April.</p>
+		<br>
+		<h2>Innomasters</h2>
+		<p>Innomasters is a mentorship program for which a team of high school students are paired up with mentors from
+			EWB U of T, and work on a Praxis/ESP style design project in their local community through the term. It is
+			split into stages (including a design brief, and a recommendation report). The project concludes in a final
+			showcase that takes place in April.</p>
 
-<p>Volunteering as a mentor for this term, I guided a team of students from University of Toronto Schools (UTS). They developed upon the opportunity of WiFi at UTS since they experienced the poor WiFi system at their school. According to the survey that they conducted, the WiFi coverage was very poor in certain areas of the school, and that there is no restriction on using WiFi for purposes other than studying (video games, video watching/streaming, social media, etc.). Also, from interviewing the stakeholders, they found out that the current bandwidth is inadequate.</p>
+		<p>Volunteering as a mentor for this term, I guided a team of students from University of Toronto Schools (UTS).
+			They developed upon the opportunity of WiFi at UTS since they experienced the poor WiFi system at their
+			school. According to the survey that they conducted, the WiFi coverage was very poor in certain areas of the
+			school, and that there is no restriction on using WiFi for purposes other than studying (video games, video
+			watching/streaming, social media, etc.). Also, from interviewing the stakeholders, they found out that the
+			current bandwidth is inadequate.</p>
 
-<img src="pics/ewb.jpg" alt="logo" style="width:40%;border:0">
-<p><i>Youth Engagement Team from Innomasters</i></p>
- 
-<p>As I guided them through the project, they learned about the basic engineering design model in Praxis (Frame, Diverge, Converge, Represent), and I shared them with tools and techniques (such as Morph Charts, Pugh Chart, pairwise comparison, etc.) that they can use for each stage of design. I also helped them with any background and technical knowledge in hardware related to networks.</p>
+		<img src="pics/ewb.jpg" alt="logo" style="width:40%;border:0">
+		<p><i>Youth Engagement Team from Innomasters</i></p>
 
-<p>In the final showcase, the team recommended a solution that integrated existing methods (such as relocating the routers) and future technologies (such as Li-Fi). The team was presented the award for the best research.</p><br>
- 
-<h3>Links</h3>
-<p><a href="https://www.ewb.ca/en/">EWB Canada</a></p>
-<p><a href="https://utoronto.ewb.ca/en/">EWB U of T Chapter</a></p>
-<p><a href="https://ewbuoftyouth.weebly.com/">U of T EWB Youth Engagement</a></p>
-<br><br><br>
+		<p>As I guided them through the project, they learned about the basic engineering design model in Praxis (Frame,
+			Diverge, Converge, Represent), and I shared them with tools and techniques (such as Morph Charts, Pugh
+			Chart, pairwise comparison, etc.) that they can use for each stage of design. I also helped them with any
+			background and technical knowledge in hardware related to networks.</p>
 
+		<p>In the final showcase, the team recommended a solution that integrated existing methods (such as relocating
+			the routers) and future technologies (such as Li-Fi). The team was presented the award for the best
+			research.</p><br>
+
+		<h3>Links</h3>
+		<p><a href="https://www.ewb.ca/en/">EWB Canada</a></p>
+		<p><a href="https://utoronto.ewb.ca/en/">EWB U of T Chapter</a></p>
+		<p><a href="https://ewbuoftyouth.weebly.com/">U of T EWB Youth Engagement</a></p>
+		<br><br><br>
+
+	</body>
+</div>
 
 <!--Footer-->
-<div class="footer">
-<br>                                   
+<main-footer></main-footer>
 
-<p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
-
-<div class="socialmedia">
-    <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
-    <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li" width=30></a>
-    <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
-    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
-    <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png" alt="li" width=30></a>
-    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail" width=30></a>
-</div>
-
-</p>
-<br><br>
-</div>
-
-</body>
 </html>
