--- a/index.html
+++ b/index.html
@@ -1,71 +1,62 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<!--Website Information -->
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Bill Sun's Personal Portfolio">
-	<meta name="author" content="Bill (Yuan Hong) Sun">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<link rel="stylesheet" href="styles.css">
-	<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
+    <!--Website Information -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Bill Sun's Personal Portfolio">
+    <meta name="author" content="Bill (Yuan Hong) Sun">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  	<script type="text/javascript" src="styles.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="styles.js"></script>
 
 </head>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:425px;">
-<body background="pics/toronto1.png">
+    <body background="pics/toronto1.png">
 
+        <!--Main-->
+        <title>Bill Sun's Portfolio</title>
+        </head>
 
-<!--Main-->
-<title>Bill Sun's Portfolio</title>
-</head>
-
-<div class="box">
-  <img src="pics/portrait1.jpg" alt="" class="box-img">
-<h1>
-Bill Yuan Hong Sun</h1>
-<h5>
-Machine Learning and Software Engineer</h5>
-<p>
-Hi! I am a third-year <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine Intelligence</a> 
-student @ University of Toronto. I am currently on PEY co-op at <a href="https://www.nuralogix.ai/">Nuralogix</a> 
-as a Data Science Software Developer, working on the <a href="https://www.deepaffex.ai/en/">DeepAffex</a> API. 
-This is a showcase of my skills, projects, and insights. Enjoy!
-</p>
-<ul>
-<li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-<li><a href="https://github.com/billyhsun"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
-</ul>
-<button><a href="overview.html">About</a></button>
-<button><a href="projects.html">Projects</a></button>
-<button><a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">Résumé</a></button>
-<button><a href="blogs.html">Blog</a></button>
+        <div class="box">
+            <img src="pics/portrait1.jpg" alt="" class="box-img">
+            <h1>
+                Bill Yuan Hong Sun</h1>
+            <h5>
+                Machine Learning and Software Engineer</h5>
+            <p>
+                Hi! I am a third-year <a
+                    href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine
+                    Intelligence</a>
+                student @ University of Toronto. I am currently on PEY co-op at <a
+                    href="https://www.nuralogix.ai/">Nuralogix</a>
+                as a Data Science Software Developer, working on the <a
+                    href="https://www.deepaffex.ai/en/">DeepAffex</a> API.
+                This is a showcase of my skills, projects, and insights. Enjoy!
+            </p>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fa fa-linkedin-square"
+                            aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/billyhsun"><i class="fa fa-github-square" aria-hidden="true"></i></a>
+                </li>
+            </ul>
+            <button><a href="overview.html">About</a></button>
+            <button><a href="projects.html">Projects</a></button>
+            <button><a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">Résumé</a></button>
+            <button><a href="blogs.html">Blog</a></button>
+        </div>
+    </body>
 </div>
-
 
 <!--Footer-->
-<div class="footer">
-    <br>                                   
+<main-footer></main-footer>
 
-    <p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
-
-    <div class="socialmedia">
-        <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
-        <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li" width=30></a>
-        <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
-        <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
-        <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png" alt="li" width=30></a>
-        <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail" width=30></a>
-    </div>
-
-    </p>
-    <br><br>
-</div>
-
-</body>
-</html>﻿
+</html>
