--- a/aer201.html
+++ b/aer201.html
@@ -12,103 +12,64 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
+	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 	<script src="styles.js"></script>
 
 </head>
 
 <!--Menu-->
-<div class="navbar" style="z-index: 2;">
-	<div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
-	<div class="dropdown">
-	  <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
-		<i class="fa fa-caret-down"></i>
-	  </button>
-	  <div class="dropdown-content">
-	  
-	  <a href="solarcar.html">Solar Car Racing Team</a>
-	  <a href="ewb.html">Engineers Without Borders</a>
-	  <a href="ilead.html">iLead The Game, University of Toronto</a>
-	  <a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-	  <a href="weather.html">Earth Sciences Hobby Research</a>
-	  <a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-	  <a href="swim.html">Swimming and Lifeguarding</a>
-	  </div>
-	</div> 
-	<div class="dropdown">
-	  <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
-		<i class="fa fa-caret-down"></i>
-	  </button>
-	  <div class="dropdown-content">
-		  <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
-		  <a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
-		  <a href="research.html">Transportation Modelling Research</a>
-	  <a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-	  <a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-	  <a href="game.html">Boxhead Video Game</a>
-	  <a href="parking.html">Parking Manager App Simulator</a>
-	  <a href="aer201.html">Autonomous Pill Packaging Machine</a>
-	  <a href="praxis.html">ESC101/102 - Praxis I + II</a>
-	  <a href="civ102.html">CIV102 - Structures and Materials</a>
-	  </div>
-	</div>
-	<div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
-	  <div class="logo"><h1 style="margin:1px;">
-		<a href="index.html" style="text-decoration: none;">bill.</a></h1>
-	</div>
-</div>
+<main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
+	<body style="background-color: #ccccff;">
 
-<body style="background-color: #ccccff;">
+		<!--Main-->
+		<title>Pill Packaging Machine - Bill Sun</title>
+		</head>
 
+		<h1>Autonomous Pill Packaging Machine</h1>
+		<h3>AER201 - Engineering Design, University of Toronto</h3>
+		<h4>Instructor: Prof. M. Reza Emami</h4>
 
-<!--Main-->
-<title>Pill Packaging Machine - Bill Sun</title>
-</head>
+		<p><a href="http://aer201.aerospace.utoronto.ca/course/syllabus.htm">Course Website</a></p>
 
-<h1>Autonomous Pill Packaging Machine</h1>
-<h3>AER201 - Engineering Design, University of Toronto</h3>
-<h4>Instructor: Prof. M. Reza Emami</h4>
+		<p>AER201 is an multidisciplinary engineering design course that involves the design and construction of an
+			autonomous robot, in teams of 3. My team had to build an autonomous pill packaging machine, where the user
+			inserts a prescription organizer box and 3 different types of pills, and the machine organizes the pills
+			into the pillbox based on given instructions. The instructions are loaded through a user interface on the
+			machine. The requirements for the machine are outlined in the <a href="files/RFP - Pill Boxing.pdf">Request
+				for Proposal (RFP)</a>.</p>
 
-<p><a href="http://aer201.aerospace.utoronto.ca/course/syllabus.htm">Course Website</a></p>
+		<p>Based on the requirements from the RFP, my team developed a potential design using the engineering design
+			process, outlined by the <a href="files/Team 7 Proposal.pdf">Proposal Document</a>.</p>
 
-<p>AER201 is an multidisciplinary engineering design course that involves the design and construction of an autonomous robot, in teams of 3. My team had to build an autonomous pill packaging machine, where the user inserts a prescription organizer box and 3 different types of pills, and the machine organizes the pills into the pillbox based on given instructions. The instructions are loaded through a user interface on the machine. The requirements for the machine are outlined in the <a href="files/RFP - Pill Boxing.pdf">Request for Proposal (RFP)</a>.</p>
+		<p>As a part of the role division of team members, I am mainly responsible for the elctromechanical subsystem of
+			the machine. This includes all the structural, mechanical, and some electrical parts of the robot. It
+			comprises the selection and powering of actuators (motors) and material selection. In addition, I am also
+			involved in the circuits construction and programming of the microcontroller that controls all the
+			functionalities.</p>
 
-<p>Based on the requirements from the RFP, my team developed a potential design using the engineering design process, outlined by the <a href="files/Team 7 Proposal.pdf">Proposal Document</a>.</p> 
+		<p>The <a href="files/Final Report.pdf">Final Report</a> describes all the design decisions, construction and
+			integration process, and testing procedures. All the code and datasheets are also on this document. The
+			final product is currently partially functional. </p>
 
-<p>As a part of the role division of team members, I am mainly responsible for the elctromechanical subsystem of the machine. This includes all the structural, mechanical, and some electrical parts of the robot. It comprises the selection and powering of actuators (motors) and material selection. In addition, I am also involved in the circuits construction and programming of the microcontroller that controls all the functionalities.</p>
+		<br>
+		<p>Oblique view: </p>
+		<img src="pics/aer2011.png" alt="logo" style="width:80%; margin:10px;">
+		<p>Side view: </p>
+		<img src="pics/aer2012.jpg" alt="logo" style="width:80%; margin:10px;">
+		<p>Top view: </p>
+		<img src="pics/aer2013.jpg" alt="logo" style="width:80%; margin:10px;">
+		<p>CAD schematic: </p>
+		<img src="pics/aer2014.png" alt="logo" style="width:80%; margin:10px;">
 
-<p>The <a href="files/Final Report.pdf">Final Report</a> describes all the design decisions, construction and integration process, and testing procedures. All the code and datasheets are also on this document. The final product is currently partially functional. </p>
+		<br><br><br>
 
-<br>
-<p>Oblique view: </p>
-<img src="pics/aer2011.png" alt="logo" style="width:80%; margin:10px;">
-<p>Side view: </p>
-<img src="pics/aer2012.jpg" alt="logo" style="width:80%; margin:10px;">
-<p>Top view: </p>
-<img src="pics/aer2013.jpg" alt="logo" style="width:80%; margin:10px;">
-<p>CAD schematic: </p>
-<img src="pics/aer2014.png" alt="logo" style="width:80%; margin:10px;">
+	</body>
 
-<br><br><br>
-
-<div class="footer">
-	<br>                                   
-	
-	<p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
-	
-	<div class="socialmedia">
-		<a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
-		<a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li" width=30></a>
-		<a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
-		<a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
-		<a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png" alt="li" width=30></a>
-		<a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail" width=30></a>
-	</div>
-	
-	</p>
-	<br><br>
 </div>
 
-</body>
-</html>﻿
+<!--Footer-->
+<main-footer></main-footer>
+
+</html>
