--- a/contact.html
+++ b/contact.html
@@ -1,167 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
+    <!--Website Information -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Bill Sun's Personal Portfolio">
+    <meta name="author" content="Bill (Yuan Hong) Sun">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="styles.js"></script>
 
-<!--Website Information -->
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Bill Sun's Personal Portfolio">
-	<meta name="author" content="Bill (Yuan Hong) Sun">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-	<link rel="stylesheet" href="styles.css">
-	<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
-  	<script src="styles.js"></script>
+    <style>
+        input[type=text],
+        select,
+        textarea {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+            margin-top: 6px;
+            margin-bottom: 16px;
+            resize: vertical;
+        }
 
-<style>
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-}
+        input[type=submit] {
+            background-color: #4d4dff;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-input[type=submit] {
-    background-color: #4d4dff;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
+        input[type=submit]:hover {
+            background-color: #0000cc;
+        }
 
-input[type=submit]:hover {
-    background-color: #0000cc;
-}
-
-.container {
-    border-radius: 5px;
-    background-color: #cccccc;
-    padding: 20px;
-}
-</style>
+        .container {
+            border-radius: 5px;
+            background-color: #cccccc;
+            padding: 20px;
+        }
+    </style>
 
 </head>
 
 <!--Menu-->
-<div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
-  <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-    	<a href="solarcar.html">Solar Car Racing Team</a>
-    	<a href="ewb.html">Engineers Without Borders</a>
-    	<a href="ilead.html">iLead The Game, University of Toronto</a>
-    	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-    	<a href="weather.html">Earth Sciences Hobby Research</a>
-    	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-    	<a href="swim.html">Swimming and Lifeguarding</a>
-    </div>
-  </div> 
-  <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-        <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
-		<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
-    		<a href="research.html">Transportation Modelling Research</a>
-    	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-    	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-    	<a href="game.html">Boxhead Video Game</a>
-    	<a href="parking.html">Parking Manager App Simulator</a>
-    	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-    	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-    	<a href="civ102.html">CIV102 - Structures and Materials</a>
-    </div>
-  </div>
-  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
-    <div class="logo"><h1 style="margin:1px;">
-  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
-  </div>
-</div>
+<main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
-<body background="pics/background4.jpg">
 
-<!--Main-->
-<title>Contact Me - Bill Sun</title>
-</head>
-<body>
+    <body background="pics/background4.jpg">
 
-<h1>Contact Me</h1>
+        <!--Main-->
+        <title>Contact Me - Bill Sun</title>
+        </head>
 
-</head>
-<body>
+        <body>
 
-<div class="container">
-  <form action="/action_page.php">
-    <label for="fname">Name</label>
-    <input type="text" id="name" name="name" placeholder="Your name..">
+            <h1>Contact Me</h1>
 
-    <label for="lname">Email</label>
-    <input type="text" id="email" name="email" placeholder="Your email..">
+            </head>
 
-    <label for="company">Telephone</label>
-    <input type="text" id="number" name="number" placeholder="Your phone number..">
+            <body>
 
-    <label for="subject">Your Message</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+                <div class="container">
+                    <form action="/action_page.php">
+                        <label for="fname">Name</label>
+                        <input type="text" id="name" name="name" placeholder="Your name..">
 
-    <input type="submit" value="Submit">
-  </form>
-</div>
-<br>
+                        <label for="lname">Email</label>
+                        <input type="text" id="email" name="email" placeholder="Your email..">
 
-<p><b>Email</b>: <a href="mailto:billyuanhong.sun@mail.utoronto.ca">billyuanhong.sun@mail.utoronto.ca</a></p>
+                        <label for="company">Telephone</label>
+                        <input type="text" id="number" name="number" placeholder="Your phone number..">
 
-<p><b>Telephone</b>: +1 (647) 987-3896</p>
+                        <label for="subject">Your Message</label>
+                        <textarea id="subject" name="subject" placeholder="Write something.."
+                            style="height:200px"></textarea>
 
-<div class="socialmedia">
-    <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
-    <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li" width=30></a>
-    <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
-    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
-    <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png" alt="li" width=30></a>
-    <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="logos/instagram.png" alt="in" width=30></a>
-    <a href="https://www.facebook.com/billyuanhong.sun"><img src="logos/facebook.png" alt="fb" width=30></a>
-    <a href="https://twitter.com/billsunswag"><img src="logos/twitter.png" alt="fb" width=30></a>
-    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail" width=30></a>
-</div>
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
+                <br>
 
-<p>If you are interested, my <b>résumé</b> can be found <a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">here</a></p>
-<br>
-<br>
-<br>
+                <p><b>Email</b>: <a
+                        href="mailto:billyuanhong.sun@mail.utoronto.ca">billyuanhong.sun@mail.utoronto.ca</a></p>
 
-</div>
+                <p><b>Telephone</b>: +1 (647) 987-3896</p>
 
-<!--Footer-->
-<div class="footer">
-<br>                                   
+                <div class="socialmedia">
+                    <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
+                    <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li"
+                            width=30></a>
+                    <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
+                    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
+                    <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png"
+                            alt="li" width=30></a>
+                    <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="logos/instagram.png" alt="in"
+                            width=30></a>
+                    <a href="https://www.facebook.com/billyuanhong.sun"><img src="logos/facebook.png" alt="fb"
+                            width=30></a>
+                    <a href="https://twitter.com/billsunswag"><img src="logos/twitter.png" alt="fb" width=30></a>
+                    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail"
+                            width=30></a>
+                </div>
 
-<p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
+                <p>If you are interested, my <b>résumé</b> can be found <a
+                        href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">here</a>
+                </p>
+                <br>
+                <br>
+                <br>
 
-<div class="socialmedia">
-    <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
-    <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li" width=30></a>
-    <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
-    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
-    <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png" alt="li" width=30></a>
-    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail" width=30></a>
-</div>
-
-</p>
-<br><br>
 </div>
 
 </body>
-</html>﻿
+
+<!--Footer-->
+<main-footer></main-footer>
+
+</html>
