--- a/ilead.html
+++ b/ilead.html
@@ -1,111 +1,72 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<!--Website Information -->
+	<!--Website Information -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Bill Sun's Personal Portfolio">
 	<meta name="author" content="Bill (Yuan Hong) Sun">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
-  	<script src="styles.js"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+	<script src="styles.js"></script>
 
 </head>
+
 <!--Menu-->
-<div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
-  <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-	
-	<a href="solarcar.html">Solar Car Racing Team</a>
-	<a href="ewb.html">Engineers Without Borders</a>
-	<a href="ilead.html">iLead The Game, University of Toronto</a>
-	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-	<a href="weather.html">Earth Sciences Hobby Research</a>
-	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-	<a href="swim.html">Swimming and Lifeguarding</a>
-    </div>
-  </div> 
-  <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-        <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
-		<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
-		<a href="research.html">Transportation Modelling Research</a>
-	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-	<a href="game.html">Boxhead Video Game</a>
-	<a href="parking.html">Parking Manager App Simulator</a>
-	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-	<a href="civ102.html">CIV102 - Structures and Materials</a>
-    </div>
-  </div>
-  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
-    <div class="logo"><h1 style="margin:1px;">
-  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
-  </div>
-</div>
+<main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
-<body style="background-color:#ccccff;">
+	<body style="background-color:#ccccff;">
+
+		<!--Main-->
+		<title>iLead The Game - Bill Sun</title>
+		</head>
+
+		<h1>Improving Bike Theft Awareness on Campus</h1>
+		<h3>Institute for Leadership Education in Engineering (iLead), <i>The Game</i> Program, University of Toronto
+		</h3><br>
+
+		<img src="pics/ILead.png" alt="portfolio item" width=400 style="float:right;margin:25px;">
+
+		<p>During my second year (2017-2018), I participated in iLead's <i>The Game</i> program, a platform where teams
+			use the engineering approach to resolve social issues. </p>
+
+		<p>My team worked on the issue of bike theft in Toronto, by aiming to reduce the number of bike thefts. At
+			first, we made several surveys in cycling focus groups to find out the root causes. These included the lack
+			of police enforecement, lack of general awareness, and not enough technology to track bikes. We initially
+			designed a mobile app and tag system, only to find out that a reference design (<a
+				href="https://project529.com/garage">Project 529</a>) is being planned to be implemented in Toronto by
+			an organization called <a href="https://www.cycleto.ca//">Cycle Toronto</a>, after meeting with their
+			representatives. </p>
+
+		<p>As a result, my team narrowed down on increasing awareness on bike theft, which led to the manufacturing of a
+			sign and poster box stand for displaying our poster, as well as information cards to inform cyclists about
+			secure bike-locking methods. This system was put on trial on campus and had some success. If continued, we
+			could partner with Cycle Toronto and develop a larger awareness campaign. </p>
+
+		<p>My team's final presentation can be seen <a
+				href="https://docs.google.com/presentation/d/17z1L7veRwuF6ZbfExn7Rh8BuMlSWBM2HDAfkJXiTK1Q/edit?usp=sharing">here</a>.
+		</p>
+
+		<img src="pics/thegame.jpg" alt="portfolio item" width=80%>
 
 
+		<h3>Links</h3>
+		<p><a href="http://ilead.engineering.utoronto.ca/">Institute for Leadership Education in Engineering (iLead)</a>
+		</p>
+		<p><a href="http://ilead.engineering.utoronto.ca/events-programs/the-game/"><i>The Game</i> Program</a></p>
+		<br><br><br>
 
-<!--Main-->
-<title>iLead The Game - Bill Sun</title>
-</head>
-
-<h1>Improving Bike Theft Awareness on Campus</h1>
-<h3>Institute for Leadership Education in Engineering (iLead), <i>The Game</i> Program, University of Toronto</h3><br>
-
-<img src="pics/ILead.png" alt="portfolio item" width=400 style="float:right;margin:25px;">
-
-<p>During my second year (2017-2018), I participated in iLead's <i>The Game</i> program, a platform where teams use the engineering approach to resolve social issues. </p>
-
-<p>My team worked on the issue of bike theft in Toronto, by aiming to reduce the number of bike thefts. At first, we made several surveys in cycling focus groups to find out the root causes. These included the lack of police enforecement, lack of general awareness, and not enough technology to track bikes. We initially designed a mobile app and tag system, only to find out that a reference design (<a href="https://project529.com/garage">Project 529</a>) is being planned to be implemented in Toronto by an organization called <a href="https://www.cycleto.ca//">Cycle Toronto</a>, after meeting with their representatives. </p>
-
-<p>As a result, my team narrowed down on increasing awareness on bike theft, which led to the manufacturing of a sign and poster box stand for displaying our poster, as well as information cards to inform cyclists about secure bike-locking methods. This system was put on trial on campus and had some success. If continued, we could partner with Cycle Toronto and develop a larger awareness campaign. </p>
-
-<p>My team's final presentation can be seen <a href="https://docs.google.com/presentation/d/17z1L7veRwuF6ZbfExn7Rh8BuMlSWBM2HDAfkJXiTK1Q/edit?usp=sharing">here</a>.</p>
-
-<img src="pics/thegame.jpg" alt="portfolio item" width=80%>
-
-
-<h3>Links</h3>
-<p><a href="http://ilead.engineering.utoronto.ca/">Institute for Leadership Education in Engineering (iLead)</a></p>
-<p><a href="http://ilead.engineering.utoronto.ca/events-programs/the-game/"><i>The Game</i> Program</a></p>
-<br><br><br>
-
-
+	</body>
+</div>
 
 <!--Footer-->
-<div class="footer">
-<br>                                   
+<main-footer></main-footer>
 
-<p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
-
-<div class="socialmedia">
-    <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
-    <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li" width=30></a>
-    <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
-    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
-    <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png" alt="li" width=30></a>
-    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail" width=30></a>
-</div>
-
-</p>
-<br><br>
-</div>
-
-</body>
 </html>
