--- a/menu.html
+++ b/menu.html
@@ -1,40 +1,46 @@
 <!--Menu-->
 <div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="contact.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
-  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
+  <div class="button"><a href="contact.html"
+      style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Contact</a></div>
+  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a>
+  </div>
   <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
+    <button class="dropbtn"><a href="clubs.html"
+        style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-    	<a href="solarcar.html">Solar Car Racing Team</a>
-    	<a href="ewb.html">Engineers Without Borders</a>
-    	<a href="ilead.html">iLead The Game, University of Toronto</a>
-    	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-    	<a href="weather.html">Earth Sciences Hobby Research</a>
-    	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-    	<a href="swim.html">Swimming and Lifeguarding</a>
+      <a href="solarcar.html">Solar Car Racing Team</a>
+      <a href="ewb.html">Engineers Without Borders</a>
+      <a href="ilead.html">iLead The Game, University of Toronto</a>
+      <a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
+      <a href="weather.html">Earth Sciences Hobby Research</a>
+      <a href="deep.html">DEEP Summer Academy, University of Toronto</a>
+      <a href="swim.html">Swimming and Lifeguarding</a>
     </div>
-  </div> 
+  </div>
   <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
+    <button class="dropbtn"><a href="projects.html"
+        style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
       <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
-	<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
-	<a href="research.html">Transportation Modelling Research</a>
-    	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-    	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-    	<a href="game.html">Boxhead Video Game</a>
-    	<a href="parking.html">Parking Manager App Simulator</a>
-    	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-    	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-    	<a href="civ102.html">CIV102 - Structures and Materials</a>
+      <a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
+      <a href="research.html">Transportation Modelling Research</a>
+      <a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
+      <a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
+      <a href="game.html">Boxhead Video Game</a>
+      <a href="parking.html">Parking Manager App Simulator</a>
+      <a href="aer201.html">Autonomous Pill Packaging Machine</a>
+      <a href="praxis.html">ESC101/102 - Praxis I + II</a>
+      <a href="civ102.html">CIV102 - Structures and Materials</a>
     </div>
   </div>
-    <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
-    <div class="logo"><h1 style="margin:1px;">
-  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
+  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About
+      Me</a></div>
+  <div class="logo">
+    <h1 style="margin:1px;">
+      <a href="index.html" style="text-decoration: none;">bill.</a></h1>
   </div>
 </div>
