--- a/parking.html
+++ b/parking.html
@@ -1,103 +1,55 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-
-<!--Website Information-->
+	<!--Website Information-->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Bill Sun's Personal Portfolio">
 	<meta name="author" content="Bill (Yuan Hong) Sun">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" href="logos/b.png" sizes="32x32">
-  	<script src="styles.js"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+	<script src="styles.js"></script>
 
 </head>
 
 <!--Menu-->
-<div class="navbar" style="z-index: 2;">
-  <div class="button"><a href="blogs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">Blog</a></div>
-  <div class="dropdown">
-    <button class="dropbtn"><a href="clubs.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Extracurriculars</a>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      	<a href="solarcar.html">Solar Car Racing Team</a>
-      	<a href="ewb.html">Engineers Without Borders</a>
-      	<a href="ilead.html">iLead The Game, University of Toronto</a>
-      	<a href="fes.html">Future Engineers Society, Earl Haig Secondary School</a>
-      	<a href="weather.html">Earth Sciences Hobby Research</a>
-      	<a href="deep.html">DEEP Summer Academy, University of Toronto</a>
-      	<a href="swim.html">Swimming and Lifeguarding</a>
-    </div>
-  </div> 
-  <div class="dropdown">
-    <button class="dropbtn"><a href="projects.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 0px">Projects</a>
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-        <a href="https://github.com/billyhsun/MusicGenre">Music Genre Classifier</a>
-		<a href="https://github.com/billyhsun/Deep-Learning-Projects">Other Machine Learning Projects</a>
-		<a href="research.html">Transportation Modelling Research</a>
-      	<a href="https://devpost.com/software/chinabridge">Content Hosting App</a>
-      	<a href="https://devpost.com/software/surroundsound-1u9ljk">Music Sharing App</a>
-      	<a href="game.html">Boxhead Video Game</a>
-      	<a href="parking.html">Parking Manager App Simulator</a>
-      	<a href="aer201.html">Autonomous Pill Packaging Machine</a>
-      	<a href="praxis.html">ESC101/102 - Praxis I + II</a>
-      	<a href="civ102.html">CIV102 - Structures and Materials</a>
-    </div>
-  </div>
-  <div class="button"><a href="overview.html" style="color: #e6e6e6; text-decoration: none; padding: 15px 15px">About Me</a></div>
-    <div class="logo"><h1 style="margin:1px;">
-  	<a href="index.html" style="text-decoration: none;">bill.</a></h1>
-  </div>
-</div>
+<main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
-<body background="pics/parkinglot.jpg">
+	<body background="pics/parkinglot.jpg">
 
-<!--Main-->
-<title>Parking Manager App Simulator - Bill Sun</title>
-</head>
+		<!--Main-->
+		<title>Parking Manager App Simulator - Bill Sun</title>
+		</head>
 
-<font color="white">
-<h1>Parking Manager Application Simulator</h1>
-<h3>ICS4U - Computer Programming, Earl Haig Secondary School</h3><br>
+		<font color="white">
+			<h1>Parking Manager Application Simulator</h1>
+			<h3>ICS4U - Computer Programming, Earl Haig Secondary School</h3><br>
 
-This is the final project for the grade 12 computer programming course. Using C++ and QT, this is a simulator for a parking manager application, where the user can book parking spots ahead of time, while the manager can keep track of parking times and fees automatically. <br><br>
+			This is the final project for the grade 12 computer programming course. Using C++ and QT, this is a
+			simulator for a parking manager application, where the user can book parking spots ahead of time, while the
+			manager can keep track of parking times and fees automatically. <br><br>
 
-You can find more info <a href="https://docs.google.com/presentation/d/1USTnklmIhDBNNschInb0S65nVlk1E4cYfUybT6-2Pw4/edit?usp=sharing">here</a>.<br>
+			You can find more info <a
+				href="https://docs.google.com/presentation/d/1USTnklmIhDBNNschInb0S65nVlk1E4cYfUybT6-2Pw4/edit?usp=sharing">here</a>.<br>
 
-<img src="pics/parking2.png" alt="2" style="width:50%;margin:5px;"><img src="pics/parking1.png" alt="2" style="width:27%;margin:5px;"><br>
-<img src="pics/parking3.png" alt="2" style="width:22%;margin:5px;"><img src="pics/parking4.png" alt="2" style="width:30%;margin:5px;"><br>
+			<img src="pics/parking2.png" alt="2" style="width:50%;margin:5px;"><img src="pics/parking1.png" alt="2"
+				style="width:27%;margin:5px;"><br>
+			<img src="pics/parking3.png" alt="2" style="width:22%;margin:5px;"><img src="pics/parking4.png" alt="2"
+				style="width:30%;margin:5px;"><br>
 
-</font><br><br><br>
+		</font><br><br><br>
+
+	</body>
 </div>
-
 
 <!--Footer-->
-<div class="footer">
-<br>                                   
+<main-footer></main-footer>
 
-
-<p style="margin-left: 2%;"><font color=#cccccc>Copyright 2018 © Bill Yuan Hong Sun</font>
-
-<div class="socialmedia">
-    <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
-    <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li" width=30></a>
-    <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
-    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
-    <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png" alt="li" width=30></a>
-    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail" width=30></a>
-</div>
-
-</p>
-<br><br>
-</div>
-
-</body>﻿
 </html>
