New pages and content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
         <!--Main-->
         <title>Bill Sun's Portfolio</title>
-        </head>
 
         <div class="box">
             <img src="pics/portrait1.jpg" alt="" class="box-img">
@@ -33,13 +32,12 @@
             <h5>
                 Machine Learning and Software Engineer</h5>
             <p>
-                Hi! I am a third-year <a
+                Hi! I am a fourth-year <a
                     href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine
                     Intelligence</a>
-                student @ University of Toronto. I am currently on PEY co-op at <a
+                student @ University of Toronto. I recently completed my PEY co-op at <a
                     href="https://www.nuralogix.ai/">Nuralogix</a>
-                as a Data Science Software Developer, working on the <a
-                    href="https://www.deepaffex.ai/en/">DeepAffex</a> API.
+                as a Data Science Software Developer.
                 This is a showcase of my skills, projects, and insights. Enjoy!
             </p>
             <ul>
