--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
 
     <style>
         input[type=text],
+        input[type=email],
         select,
         textarea {
             width: 100%;
@@ -56,72 +57,62 @@
 <main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
-
     <body background="pics/background4.jpg">
 
         <!--Main-->
         <title>Contact Me - Bill Sun</title>
-        </head>
+        <h1>Contact Me</h1>
 
-        <body>
+        <div class="container">
+            <!-- Work on a way to submit the form and send as email -->
+            <form action="/">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Your name.." required>
 
-            <h1>Contact Me</h1>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Your email.." required>
 
-            </head>
+                <label for="number">Telephone</label>
+                <input type="text" id="number" name="number" placeholder="Your phone number..">
 
-            <body>
+                <label for="subject">Your Message</label>
+                <textarea id="subject" name="subject" style="height:200px" required></textarea>
 
-                <div class="container">
-                    <form action="/action_page.php">
-                        <label for="fname">Name</label>
-                        <input type="text" id="name" name="name" placeholder="Your name..">
+                <input type="submit" id="submit" value="Submit">
+            </form>
+        </div>
+        <br>
 
-                        <label for="lname">Email</label>
-                        <input type="text" id="email" name="email" placeholder="Your email..">
+        <p><b>Email</b>: <a
+                href="mailto:billyuanhong.sun@mail.utoronto.ca">billyuanhong.sun@mail.utoronto.ca</a></p>
 
-                        <label for="company">Telephone</label>
-                        <input type="text" id="number" name="number" placeholder="Your phone number..">
+        <p><b>Telephone</b>: +1 (647) 987-3896</p>
 
-                        <label for="subject">Your Message</label>
-                        <textarea id="subject" name="subject" placeholder="Write something.."
-                            style="height:200px"></textarea>
+        <div class="socialmedia">
+            <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
+            <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li"
+                    width=30></a>
+            <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
+            <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
+            <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png"
+                    alt="li" width=30></a>
+            <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="logos/instagram.png" alt="in"
+                    width=30></a>
+            <a href="https://www.facebook.com/billyuanhong.sun"><img src="logos/facebook.png" alt="fb"
+                    width=30></a>
+            <a href="https://twitter.com/billsunswag"><img src="logos/twitter.png" alt="fb" width=30></a>
+            <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail"
+                    width=30></a>
+        </div>
 
-                        <input type="submit" value="Submit">
-                    </form>
-                </div>
-                <br>
+        <p>If you are interested, my <b>résumé</b> can be found <a
+                href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">here</a>
+        </p>
+        <br>
+        <br>
+        <br>
 
-                <p><b>Email</b>: <a
-                        href="mailto:billyuanhong.sun@mail.utoronto.ca">billyuanhong.sun@mail.utoronto.ca</a></p>
-
-                <p><b>Telephone</b>: +1 (647) 987-3896</p>
-
-                <div class="socialmedia">
-                    <a href="https://github.com/billyhsun"><img src="logos/github.png" alt="gh" width=30></a>
-                    <a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><img src="logos/linkedin.png" alt="li"
-                            width=30></a>
-                    <a href="https://angel.co/bill-sun-1"><img src="logos/angellist.png" alt="li" width=30></a>
-                    <a href="https://devpost.com/billyhsun"><img src="logos/devpost.png" alt="devpost" width=30></a>
-                    <a href="https://stackoverflow.com/users/11026180/bill-sun"><img src="logos/stackoverflow.png"
-                            alt="li" width=30></a>
-                    <a href="https://www.instagram.com/billyhsun/?hl=en"><img src="logos/instagram.png" alt="in"
-                            width=30></a>
-                    <a href="https://www.facebook.com/billyuanhong.sun"><img src="logos/facebook.png" alt="fb"
-                            width=30></a>
-                    <a href="https://twitter.com/billsunswag"><img src="logos/twitter.png" alt="fb" width=30></a>
-                    <a href="mailto:billyuanhong.sun@mail.utoronto.ca"><img src="logos/outlook.png" alt="mail"
-                            width=30></a>
-                </div>
-
-                <p>If you are interested, my <b>résumé</b> can be found <a
-                        href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">here</a>
-                </p>
-                <br>
-                <br>
-                <br>
-
-</div>
-
+    </div>
 </body>
 
 <!--Footer-->
