--- a/overview.html
+++ b/overview.html
@@ -23,6 +23,7 @@
 <main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:500px;">
+
     <body style="background-color:#333333;">
 
         <!--Main-->
@@ -30,7 +31,7 @@
 
         <h1>About Me</h1><br>
 
-        <p>Hello! I’m Bill, a third-year Engineering Science student at the University of Toronto, majoring in
+        <p>Hello! I’m Bill, a fourth-year Engineering Science student at the University of Toronto, majoring in
             <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
                 Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data,
             machine
@@ -38,7 +39,7 @@
             and the engineering approach to solve challenging problems, and helping to improve people's lives through
             technology.</p>
 
-        <p>From May 2019 to May 2020, I am on <a
+        <p>From May 2019 to August 2020, I completed my <a
                 href="https://engineeringcareers.utoronto.ca/work-experience-programs/professional-experience-year-co-op-program-pey-co-op/">professional
                 experience year (PEY)</a> co-op
             at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer, where my work is
@@ -57,8 +58,9 @@
             mentor
             younger peers.</p>
 
-        <p>I am currently open to <strong>summer 2020</strong> internship opportunities in software engineering and data
-            science. You can reach me by
+        <p>I am currently open to full-time opportunities starting in <strong>summer 2021</strong> in software
+            engineering,
+            data engineering, and data science. You can reach me by
             <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a> or <a
                 href="https://www.linkedin.com/in/bill-yuan-hong-sun/">LinkedIn</a>.
             <br><br><br>
@@ -431,6 +433,18 @@
     <h2 id="exp" style="text-align:center;">Experience Highlight</h2>
 
     <figure class="item">
+        <a href="pey.html" target="_blank"><img src="pics/nuralogix.png" alt="portfolio item" width=400 height=250></a>
+        <figcaption class="desc">
+            <p>
+                <font color="white"><strong>Nuralogix Corporation</strong></font>
+            </p>
+            <p>
+                <font color="white">PEY Co-op as a Data Science Software Developer</font>
+            </p>
+        </figcaption>
+    </figure>
+
+    <figure class="item">
         <a href="https://github.com/billyhsun/MusicGenre" target="_blank"><img src="pics/musicgenre.png"
                 alt="portfolio item" width=400 height=250></a>
         <figcaption class="desc">
@@ -438,7 +452,35 @@
                 <font color="white"><strong>Music Genre Classifier</strong></font>
             </p>
             <p>
-                <font color="white">Deep Learning Project</font>
+                <font color="white">Deep Learning and Web Project</font>
+            </p>
+        </figcaption>
+    </figure>
+
+    <figure class="item">
+        <a href="capstone.html" target="_blank"><img src="pics/pho.png" alt="portfolio item" width=400 height=250></a>
+        <figcaption class="desc">
+            <p>
+                <font color="white"><strong>Undergraduate Capstone Project</strong></font>
+            </p>
+            <p>
+                <font color="white">Vaccine and COVID-19 misinformation detection on social media, powered by natural
+                    language processing</font>
+                <font color="white">Client: Public Health Ontario</font>
+            </p>
+        </figcaption>
+    </figure>
+
+    <figure class="item">
+        <a href="thesis.html" target="_blank"><img src="pics/anxiety.png" alt="portfolio item" width=400 height=250></a>
+        <figcaption class="desc">
+            <p>
+                <font color="white"><strong>Undergraduate Thesis</strong></font>
+            </p>
+            <p>
+                <font color="white">Machine Learning Approaches for Rapid Assessment of Anxiety</font>
+                <font color="white">Prof. Kang Lee, Ontario Institute for Studies in Education, University of Toronto
+                </font>
             </p>
         </figcaption>
     </figure>
@@ -457,31 +499,6 @@
     </figure>
 
     <figure class="item">
-        <a href="https://devpost.com/software/chinabridge" target="_blank"><img src="pics/chinabridge.jpg"
-                alt="portfolio item" width=400 height=250></a>
-        <figcaption class="desc">
-            <p>
-                <font color="white"><strong>Content Hosting Application</strong></font>
-            </p>
-            <p>
-                <font color="white">Toronto Chinese Gospel Church</font>
-            </p>
-        </figcaption>
-    </figure>
-
-    <figure class="item">
-        <a href="game.html" target="_blank"><img src="pics/game1.png" alt="portfolio item" width=400 height=250></a>
-        <figcaption class="desc">
-            <p>
-                <font color="white"><strong>Boxhead Video Game</strong></font>
-            </p>
-            <p>
-                <font color="white">Python Programming Project</font>
-            </p>
-        </figcaption>
-    </figure>
-
-    <figure class="item">
         <a href="https://devpost.com/software/surroundsound-1u9ljk" target="_blank"><img src="pics/surroundsound.jpg"
                 alt="portfolio item" width=400 height=250></a>
         <figcaption class="desc">
@@ -490,18 +507,6 @@
             </p>
             <p>
                 <font color="white">Hack The 6ix 2018</font>
-            </p>
-        </figcaption>
-    </figure>
-
-    <figure class="item">
-        <a href="aer201.html" target="_blank"><img src="pics/aer2011.png" alt="portfolio item" width=400 height=250></a>
-        <figcaption class="desc">
-            <p>
-                <font color="white"><strong>Pill Packaging Machine</strong></font>
-            </p>
-            <p>
-                <font color="white">AER201—Engineering Design, University of Toronto</font>
             </p>
         </figcaption>
     </figure>
