--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,34 @@
 
 		<h1>Projects Summary</h1><br>
 
+		<figure class="item">
+			<a href="https://survey-demo.deepaffex.ai/login" target="_blank"><img src="pics/nuralogix.png"
+					alt="portfolio item" width=400 height=250></a>
+			<figcaption class="desc">
+				<p>
+					<font color="white"><strong>Mental Health Questionnaire Website</strong></font>
+				</p>
+				<p>
+					<font color="white">Mental health surveys powered by AWS Lambda and machine learning models</font>
+					<font color="white">Email: covid19@gmail.com; Password: covid19</font>
+				</p>
+			</figcaption>
+		</figure>
+
+		<figure class="item">
+			<a href="capstone.html" target="_blank"><img src="pics/pho.png"
+					alt="portfolio item" width=400 height=250></a>
+			<figcaption class="desc">
+				<p>
+					<font color="white"><strong>Undergraduate Capstone Project</strong></font>
+				</p>
+				<p>
+					<font color="white">Vaccine and COVID-19 misinformation detection on social media, powered by natural
+						language processing</font>
+					<font color="white">Client: Public Health Ontario</font>
+				</p>
+			</figcaption>
+		</figure>
 
 		<figure class="item">
 			<a href="https://github.com/billyhsun/MusicGenre" target="_blank"><img src="pics/musicgenre.png"
@@ -44,27 +72,14 @@
 		</figure>
 
 		<figure class="item">
-			<a href="research.html" target="_blank"><img src="pics/transit2.png" alt="portfolio item" width=400
-					height=250></a>
+			<a href="https://devpost.com/software/surroundsound-1u9ljk" target="_blank"><img
+					src="pics/surroundsound.jpg" alt="portfolio item" width=400 height=250></a>
 			<figcaption class="desc">
 				<p>
-					<font color="white"><strong>Transit Modelling Research</strong></font>
+					<font color="white"><strong>Music / Playlist Sharing Application</strong></font>
 				</p>
 				<p>
-					<font color="white">University of Toronto Transportation Research Institute, Summer 2017</font>
-				</p>
-			</figcaption>
-		</figure>
-
-		<figure class="item">
-			<a href="https://devpost.com/software/chinabridge" target="_blank"><img src="pics/chinabridge.jpg"
-					alt="portfolio item" width=400 height=250></a>
-			<figcaption class="desc">
-				<p>
-					<font color="white"><strong>Content Hosting Application</strong></font>
-				</p>
-				<p>
-					<font color="white">Toronto Chinese Gospel Church</font>
+					<font color="white">Hack The 6ix 2018</font>
 				</p>
 			</figcaption>
 		</figure>
@@ -77,19 +92,6 @@
 				</p>
 				<p>
 					<font color="white">Python Programming Project</font>
-				</p>
-			</figcaption>
-		</figure>
-
-		<figure class="item">
-			<a href="https://devpost.com/software/surroundsound-1u9ljk" target="_blank"><img
-					src="pics/surroundsound.jpg" alt="portfolio item" width=400 height=250></a>
-			<figcaption class="desc">
-				<p>
-					<font color="white"><strong>Music / Playlist Sharing Application</strong></font>
-				</p>
-				<p>
-					<font color="white">Hack The 6ix 2018</font>
 				</p>
 			</figcaption>
 		</figure>
