Add content to pages

--- a/thesis.html
+++ b/thesis.html
@@ -23,14 +23,30 @@
 <main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
-	<body style="background-color:#ccccff;">
+    <body background="pics/toronto1.png">
 
-		<!--Main-->
+        <!--Main-->
         <title>Undergraduate Thesis - Bill Sun</title>
 
-        <h1>Undergraduate Thesis</h1>
+        <h1>Undergraduate Thesis Summary</h1>
         <h3>Machine Learning Approaches for Rapid Assessment of Anxiety</h3>
-        <h3>Supervisor: Kang Lee, Ontario Institute for Studies in Education, University of Toronto</h3>
+        <h3>Supervisor: <a
+                href="https://www.oise.utoronto.ca/aphd/Home/Faculty_and_Staff/Faculty/4836/Kang_Lee.html">Kang Lee</a>,
+            Ontario Institute for Studies in Education, University of Toronto</h3>
+        <h3>September 2020 — April 2021</h3>
+        <br>
+
+        <p>The goal of this thesis is to develop a self-assessment tool to efficiently predict the likelihood of anxiety,
+            using a machine learning approach. The proliferation of anxiety among young adults today is a serious mental
+            health concern, and existing anxiety assessment tools are either too long or not very accessible. Research
+            work first need be done by applying various machine learning techniques on datasets of existing anxiety and
+            mental health questionnaires, before selecting the best approach. Then, a best set of survey questions and
+            machine learning models would be selected, which would accurately predict the likelihood of anxiety, based
+            on how the questions were answered. Finally, a prototype of the thesis product would be implemented as a web
+            application, with a web user interface that mimic the functionality of the anxiety self-assessment tool.</p>
+
+        <p>I am hoping to publish my thesis in a medical / mental-health related journal upon completion, and have a 
+            demonstration of the proposed website available.</p>
 
     </body>
 </div>
