--- a/toastmasters.html
+++ b/toastmasters.html
@@ -22,7 +22,7 @@
 <main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
-    <body style="background-color: #ccccff;">
+    <body background="pics/toronto1.png">
 
         <!--Main-->
         <title>Toastmasters - Bill Sun</title>
@@ -40,7 +40,8 @@
             which requires the completion of 10 speeches (or one Toastmasters pathway). I am also working to complete
             the
             <a href="https://www.toastmasters.org/pathways-overview/pathways-visionary-communication-path">Visionary
-                Communication pathway</a>.</p>
+                Communication pathway</a>.
+        </p>
 
     </body>
 </div>
