--- a/capstone.html
+++ b/capstone.html
@@ -23,7 +23,7 @@
 <main-header></main-header>
 
 <div style="padding: 0% 10% 0% 10%; margin-top:170px; min-height:800px;">
-	<body style="background-color:#ccccff;">
+	<body background="pics/toronto1.png">
 
 		<!--Main-->
         <title>Undergraduate Capstone Project - Bill Sun</title>
@@ -32,6 +32,22 @@
         <h3>Vaccine and COVID-19 misinformation detection on social media, powered by natural
             language processing</h3>
         <h3>Client: Public Health Ontario</h3>
+        <h3>September — December 2020</h3>
+        <br>
+
+        <p>Working in a team of 4 and with a client, the goal of this capstone project is to help our client,
+            Public Health Ontario, find a way to combat misinformation about vaccines and COVID-19 on social 
+            media, using a machine learning approach.</p>
+
+        <p>My team decided to use natural language processing techniques, especially sentiment analysis, to 
+            compute sentiment scores for each social media post. The data was obtained from Public Health Ontario,
+            which consists of various labelled tweets on Twitter from earlier this year about COVID-19 and vaccination.
+            We also decided to scrap our own data online using APIs from other social media platforms, including
+            Facebook and Reddit.</p>
+        
+        <p>We are working on a web portal to display real-time statistics on how our sentiment analysis model rates
+            the latest social media posts. These posts are scraped directly from the social media sites. A demo will
+            be available upon completion.</p>
 
     </body>
 </div>
